--- a/css/default.css
+++ b/css/default.css
@@ -1,47 +1,144 @@
-.container-about-us {
-    width: 1170px;
-    padding-bottom: 20px;
+html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+}
+ 
+body {
+      font-family: "Helvetica Neue",sans-serif;
+      font-weight: lighter;
 }
 
-h1 {
-    font-size: 48px;
-}
-
-h3 {
-    color: #01001e;
-}
-
-.hp-text {
-    font-style: italic;
-}
-
-.main-title {
-    color: #1bbcff;
-    padding-bottom: 30px;
-}
-
-.navbar-default {
-    background-color: #000;
-    border-color: #e7e7e7;
-}
-
-.nav-link {
-    color: white !important;    
-}
-
-.no-padding {
+.col-md-12 {
+    width: 100%;
     padding: 0;
+    
 }
 
-td, th {
-    padding: 10px;
+.container {
+    max-width: 960px;
+    margin: 0 auto;
+    background: #f9f9f9;
+    font-size: 24px;
+    padding: 25px;
+}
+ 
+header {
+      width: 100%;
+      height: 100vh;
+      background: url(../images/erik-odiin-539947-unsplash.jpg);
+      background-size: cover;
+      background-position: center;
+}
+ 
+.content {
+      width: 94%;
+      margin: 4em auto;
+      font-size: 20px;
+      line-height: 30px;
+      text-align: justify;
+}
+ 
+.logo {
+      line-height: 60px;
+      position: fixed;
+      float: left;
+      margin: 16px 46px;
+      color: #fff;
+      font-weight: bold;
+      font-size: 20px;
+      letter-spacing: 2px;
+}
+ 
+nav {
+      position: fixed;
+      width: 100%;
+      line-height: 60px;
+}
+ 
+nav ul {
+      line-height: 60px;
+      list-style: none;
+      background: rgba(0, 0, 0, 0);
+      overflow: hidden;
+      color: #fff;
+      padding: 0;
+      text-align: right;
+      margin: 0;
+      padding-right: 40px;
+      transition: 1s;
+}
+ 
+nav.black ul {
+      background: #000;
+}
+ 
+nav ul li {
+      display: inline-block;
+      padding: 16px 40px;;
+}
+ 
+nav ul li a {
+      text-decoration: none;
+      color: #fff;
+      font-size: 16px;
+}
+ 
+.menu-icon {
+      line-height: 60px;
+      width: 100%;
+      background: #000;
+      text-align: right;
+      box-sizing: border-box;
+      padding: 15px 24px;
+      cursor: pointer;
+      color: #fff;
+      display: none;
 }
 
-tr {
-    border: 1px solid black;
+.parallax {
+    background: url(../images/luca-bravo-275599-unsplash.jpg) no-repeat center;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 500px;
 }
-
-p {
-    font-size: 20px;
-    font-family: fantasy
+ 
+.parallax-1 {
+    background: url(../images/oakie-1076592-unsplash.jpg) no-repeat center;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 500px;
+}
+@media(max-width: 786px) {
+ 
+      .logo {
+            position: fixed;
+            top: 0;
+            margin-top: 16px;
+      }
+ 
+      nav ul {
+            max-height: 0px;
+            background: #000;
+      }
+ 
+      nav.black ul {
+            background: #000;
+      }
+ 
+      .showing {
+            max-height: 34em;
+      }
+ 
+      nav ul li {
+            box-sizing: border-box;
+            width: 100%;
+            padding: 24px;
+            text-align: center;
+      }
+ 
+      .menu-icon {
+            display: block;
+      }
+ 
 }
