Container width adjustment

--- a/css/default.css
+++ b/css/default.css
@@ -16,7 +16,7 @@ body {
 }
 
 .container {
-    max-width: 960px;
+    max-width: auto;
     margin: 0 auto;
     background: #f9f9f9;
     font-size: 24px;
