--- a/css/default.css
+++ b/css/default.css
@@ -9,10 +9,11 @@ body {
  background: #151519;
 }
 button{
- position: absolute;
  top: 20%;
  left: 50%;
  transform: translate(-50%, -50%)
+ margin-top: 100px;
+ margin-left: 100px;
 }
 button {
  background: none;
@@ -247,4 +248,40 @@ p {
             display: block;
       }
  
+}
+*{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+body{
+  background: #f1f1f1;
+}
+.s-m{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+.s-m a{
+  display: inline-flex;
+  width: 40px;
+  height: 40px;
+  background: #2c3e50;
+  color: white;
+  margin: 0 6px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s;
+  font-size: 22px;
+}
+.s-m a:hover{
+  background: #e67e22;
+}
+.s-m a i{
+  transition: 0.4s all;
+}
+.s-m a:hover > i{
+  transform: scale(1.6) rotate(25deg);
 }
