--- a/css/home.css
+++ b/css/home.css
@@ -1,17 +1,13 @@
 #-- Navigation Bar --#
 * {
   margin: 0;
-  padding: 0;
-  outline: 0;
-  box-sizing: border-box;
+  height: 100%;
 }
+
 body {
-  background-image: url(https://i.postimg.cc/DftcpyvG/1.jpg);
-  -webkit-background-size:cover;
-  background-size:cover;
-  background-position: center center;
-  height: 100vh;
+  width: 100%;
 }
+
 .menu-area li a {
   text-decoration: none;
 }
@@ -90,4 +86,79 @@ nav:after {
   border-bottom: 10px solid transparent;
   top: 100%;
   right: 0;
+}
+
+#-- Hero Section --#
+.img-container {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.inner-container {
+    background-image: url(../images/outdoor-adventure-hero-shot.png.jpg);
+    height: 300px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    color: white;
+    height: auto;
+}
+
+h1 {
+    font-size: 7em;
+}
+
+h2 {
+    margin-top: -17px;
+    font-size: 1.7em;
+    text-align: center;
+    font-weight: 400;
+}
+
+a {
+    margin-top: 20px;
+    font-size: 1.3em;
+}
+
+.btn {
+    display: inline-block;
+    width: 200px;
+    font-weight: bold;
+    padding: 10px;
+    color: white;
+    border: 4px solid #fff;
+    text-align: center;
+    outline: none;
+    text-decoration: none;
+    transition: background-color 0.2s ease-out, color 0.2s ease-out;
+}
+
+.btn:hover,.btn:active {
+    background-color: white;
+    color: black;
+    transition: background-color 0.3s ease-in, color 0.3s ease-in;
+}
+
+@media only screen and (max-width: 920px) {
+    .inner-container {
+        margin-top: 100px;
+    }
+}
+
+@media only screen and (max-width: 540px) {
+    .inner-container {
+        margin-top: 150px;
+    }
+    h1 {
+        font-size: 5em;
+    }
+    h2 {
+        font-size: 1.4em;
+    }
 }
