--- a/css/home.css
+++ b/css/home.css
@@ -1,95 +1,123 @@
-#-- Navigation Bar --#
 * {
-  margin: 0;
-  height: 100%;
+    margin: 0;
+    height: 100%
 }
 
 body {
-  width: 100%;
+    width: 100%;
 }
 
-.menu-area li a {
-  text-decoration: none;
+
+.navbar {
+  height: 80px;
+  background-color: transparent;
+  border: none;
+  color: white;
+  z-index: 100;
+  transition: background-color 1s ease 0s;
 }
 
-.menu-area li {
-  list-style-type: none;
+
+.navbar-default {
+  
+   .navbar-brand {
+     margin-top: 10px;
+     color: white;
+        
+      &:hover {
+         color: #C57ED3;
+         border: 1px solid #C57ED3;
+      } 
+   }
+   
+  .navbar-nav {
+    
+    > li {
+      
+      > a {
+        color: white;
+        margin: 10px 5px 5px 5px;
+        
+      }
+      > a:hover, > a:active, > a:focus {
+        color: #C57ED3;
+        border: 1px solid #C57ED3;
+      }
+      > a:visited {
+        color: #C57ED3;
+        text-decoration: none;
+      }
+
+    } //end li
+
+    > .active {
+
+      > a, > a:hover, > a:focus {
+        background-color: transparent;
+        color: #C57ED3;
+      }
+
+    }
+
+  } //end .navbar-nav
+
+  //Collapsed styles
+  .navbar-toggle {
+    border-color: #C57ED3;
+
+      &:hover, &:focus {
+        background-color: #490D40;
+      }
+
+
+
+      .icon-bar {
+        color: #C57ED3;
+        background-color: #C57ED3;
+
+      }
+  }
+
+  .navbar-collapse.collapse.in ul {
+    background-color: #490D40;
+  }
+    
+} //end .navbar-default
+
+
+
+/* Solid class attached on scroll past first section */
+
+.navbar.solid {
+  background-color: #490D40;
+  transition: background-color 1s ease 0s;
+  box-shadow: 0 0 4px grey;
+
+    .navbar-brand {
+      color: #C57ED3;
+      transition: color 1s ease 0s;
+    }
+
+    .navbar-nav {
+
+       > li {
+
+          > a {
+            color: #C57ED3;
+            transition: color 1s ease 0s;
+          }
+
+       } //end li
+
+    } //end .navbar-nav
+
 }
 
-.custom-padding{
-  padding-top: 25px;
-}
 
-nav {
-  position: relative;
-  width: calc(100% - 60px);
-  margin: 0 auto;
-  padding: 10px 0;
-  background: #333;
-  z-index: 1;
-  text-align: right;
-  padding-right: 2%;
-}
 
-.logo {
-  width: 15%;
-  float: left;
-  text-transform: uppercase;
-  color: #fff;
-  font-size: 25px;
-  text-align: left;
-  padding-left: 2%;
-}
-
-.menu-area li {
-  display: inline-block;
-}
-
-.menu-area a {
-  color: #fff;
-  font-weight: 300;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  display: block;
-  padding: 0 25px;
-  font-size: 14px;
-  line-height: 30px;
-  position: relative;
-  z-index: 1;
-}
-.menu-area a:hover {
-  background: tomato;
-  color: #fff;
-}
-
-.menu-area a:hover:after {
-  transform: translateY(-50%) rotate(-35deg);
-}
-
-nav:before {
-  position: absolute;
-  content: '';
-  border-top: 10px solid #333;
-  border-right: 10px solid #333;
-  border-left: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  top: 100%;
-  left: 0;
-}
-
-nav:after {
-  position: absolute;
-  content: '';
-  border-top: 10px solid #333;
-  border-left: 10px solid #333;
-  border-right: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  top: 100%;
-  right: 0;
-}
-
-#-- Hero Section --#
 .img-container {
+    background-image: url(../images/aaron-benson-200753-unsplash.jpg);
+    height: 70%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -97,17 +125,12 @@ nav:after {
 }
 
 .inner-container {
-    background-image: url(../images/outdoor-adventure-hero-shot.png.jpg);
-    height: 300px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
     text-align: center;
     position: absolute;
     width: 100%;
     color: white;
     height: auto;
+    margin-top: 200px;
 }
 
 h1 {
