--- a/css/home.css
+++ b/css/home.css
@@ -1,12 +1,13 @@
 * {
     margin: 0;
-    height: 100%
+    padding: 0;
+    font-family: sans-serif;
+    color: #666;
 }
 
 body {
     width: 100%;
 }
-
 
 .navbar {
   height: 80px;
@@ -17,120 +18,30 @@ body {
   transition: background-color 1s ease 0s;
 }
 
-
-.navbar-default {
-  
-   .navbar-brand {
-     margin-top: 10px;
-     color: white;
-        
-      &:hover {
-         color: #C57ED3;
-         border: 1px solid #C57ED3;
-      } 
-   }
-   
-  .navbar-nav {
-    
-    > li {
-      
-      > a {
-        color: white;
-        margin: 10px 5px 5px 5px;
-        
-      }
-      > a:hover, > a:active, > a:focus {
-        color: #C57ED3;
-        border: 1px solid #C57ED3;
-      }
-      > a:visited {
-        color: #C57ED3;
-        text-decoration: none;
-      }
-
-    } //end li
-
-    > .active {
-
-      > a, > a:hover, > a:focus {
-        background-color: transparent;
-        color: #C57ED3;
-      }
-
-    }
-
-  } //end .navbar-nav
-
-  //Collapsed styles
-  .navbar-toggle {
-    border-color: #C57ED3;
-
-      &:hover, &:focus {
-        background-color: #490D40;
-      }
-
-
-
-      .icon-bar {
-        color: #C57ED3;
-        background-color: #C57ED3;
-
-      }
-  }
-
-  .navbar-collapse.collapse.in ul {
-    background-color: #490D40;
-  }
-    
-} //end .navbar-default
-
-
-
-/* Solid class attached on scroll past first section */
-
-.navbar.solid {
-  background-color: #490D40;
-  transition: background-color 1s ease 0s;
-  box-shadow: 0 0 4px grey;
-
-    .navbar-brand {
-      color: #C57ED3;
-      transition: color 1s ease 0s;
-    }
-
-    .navbar-nav {
-
-       > li {
-
-          > a {
-            color: #C57ED3;
-            transition: color 1s ease 0s;
-          }
-
-       } //end li
-
-    } //end .navbar-nav
-
+.navbar-default .navbar-brand {
+    color: black;
 }
 
-
-
 .img-container {
-    background-image: url(../images/aaron-benson-200753-unsplash.jpg);
-    height: 70%;
+    background-image: url(../images/new-york-city-hero-background.png);
+    height: 1200px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    overflow: hidden;
 }
 
 .inner-container {
     text-align: center;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%,-50%);
+    overflow: hidden;
     width: 100%;
     color: white;
     height: auto;
-    margin-top: 200px;
 }
 
 h1 {
@@ -184,4 +95,87 @@ a {
     h2 {
         font-size: 1.4em;
     }
+}
+
+/* Parallax */
+
+body, html{
+  height:100%;
+  margin:0;
+  font-size:16px;
+  font-family:"Lato", sans-serif;
+  font-weight:400;
+  line-height:1.8em;
+  color:#666;
+}
+
+.pimg1, .pimg2, .pimg3 {
+  position:relative;
+  opacity:0.70;
+  background-position:center;
+  background-size:cover;
+  background-repeat:no-repeat;
+
+  /*
+    fixed = parallax
+    scroll = normal
+  */
+  background-attachment:fixed;
+}
+
+.pimg1{
+  background-image:url('../images/new-york-time-square-night-time.jpg');
+  min-height:100%;
+}
+
+.pimg2{
+  background-image:url('../images/new-york-time-square-night-time.jpg');
+  min-height:400px;
+}
+
+.pimg3{
+  background-image:url('../images/city-night-lights.jpg');
+  min-height:400px;
+}
+
+.section{
+  text-align:center;
+  padding:50px 80px;
+}
+
+.section-light{
+  background-color:#f4f4f4;
+  color:#666;
+}
+
+.section-dark{
+  background-color:#282e34;
+  color:#ddd;
+}
+
+.ptext{
+  position:absolute;
+  top:50%;
+  width:100%;
+  text-align:center;
+  color:#000;
+  font-size:27px;
+  letter-spacing:8px;
+  text-transform:uppercase;
+}
+
+.ptext .border{
+  background-color:#111;
+  color:#fff;
+  padding:20px;
+}
+
+.ptext .border.trans{
+  background-color:transparent;
+}
+
+@media(max-width:568px){
+  .pimg1, .pimg2, .pimg3{
+    background-attachment:scroll;
+  }
 }
