Changed 2nd parallax background image, added new image to image folder, and text color change.

--- a/css/home.css
+++ b/css/home.css
@@ -19,7 +19,7 @@ body {
 }
 
 .navbar-default .navbar-brand {
-    color: black;
+    color: white;
 }
 
 .img-container {
@@ -129,7 +129,7 @@ body, html{
 }
 
 .pimg2{
-  background-image:url('../images/new-york-time-square-night-time.jpg');
+  background-image:url('../images/central-park.jpg');
   min-height:400px;
 }
 
